Fix article alignment

--- a/frontend/website/src/Articles/Articles.css
+++ b/frontend/website/src/Articles/Articles.css
@@ -51,7 +51,6 @@
 
 .image-title-container {
     display: flex;
-    justify-content: right;
     align-items: center;
 }
 
